--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   	"search": "node search.js",
   	"remove": "node remove.js",
   	"extract": "node extract-color.js",
+  	"search-matches": "node search-matches.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aleksey Romanov",
